--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,7 @@ body {
 }
 
 .logo{
+  width: 100px;
   margin-left: 40px;
 }
 
@@ -57,6 +58,10 @@ body {
 .section--one--container{
   width: 360px;
   margin-left: 15%;
+}
+
+.first {
+  background-image: url('../assets/images/1.png');
 }
 
 .first h1{
@@ -81,19 +86,6 @@ body {
   transition: all 0.8s ease;
 }
 
-.button--customize{
-  background: #F2CE6E;
-  color: black;
-  border: none;
-  font-weight: 600;
-  border-radius: 50px;
-  padding: 15px 30px;
-  margin-top: 24px;
-  margin-right: 40px;
-  font-size: 0.6rem;
-  cursor: pointer;
-  transition: all 0.8s ease;
-}
 .button--hero:hover{
   background: black;
   color: white;
@@ -110,6 +102,7 @@ body {
 }
 
 .second{
+  background-image: url('../assets/images/2.png');
   justify-content: flex-end;
   position: relative;
 }
@@ -130,42 +123,6 @@ h2{
   font-size: 3rem;
   letter-spacing: -2px;
   line-height: 2.5rem;
-}
-
-.custom--bg{
-  width: 100%;
-  height: 800px;
-  background: #F2CE6E;
-  -webkit-transform: skew(20deg);
-  -moz-transform: skew(20deg);
-  -o-transform: skew(20deg);
-  transform: skew(20deg) rotate(21deg);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-footer{
-  background: black;
-  padding: 70px;
-  display: flex;
-  justify-content: center;
-}
-
-.button--footer{
-  background: white;
-  color: black;
-  border: none;
-  border-radius: 50px;
-  padding: 10px 30px;
-  font-size: 0.6rem;
-  cursor: pointer;
-  transition: all 0.8s ease;
-}
-
-.button--footer:hover{
-  background: black;
-  color: white;
 }
 
 #webgi-canvas {
@@ -195,12 +152,6 @@ footer{
   display: none;
 }
 
-.customizer--container{
-  position: fixed;
-  top: 50%;
-  display: none;
-  transform: translateY(-50%);
-}
 
 .strap--colors{
   list-style: none;
@@ -273,6 +224,7 @@ footer{
   }
   
   .section--third--container {
+    background-image: url('../assets/images/3.png');
     width: 220px;
     margin-left: 7%;
   }
