--- a/src/styles.css
+++ b/src/styles.css
@@ -8,10 +8,6 @@
   src: url('../assets/fonts/ReneBieder.otf') format('opentype');
 }
 
-
-
-
-
 body {
   font-family: 'DM Sans', sans-serif;
   overflow-x: hidden;
@@ -21,13 +17,13 @@ body {
   overflow-y: hidden;
 }
 
-*{
+* {
   box-sizing: border-box;
 }
 
-.loader{
-  background: black;
-  color: white;
+.loader {
+  background: #F7BDDD;
+  color: black;
   position: absolute;
   width: 100%;
   height: 100vh;
@@ -38,17 +34,17 @@ body {
   z-index: 2;
 }
 
-.progress{
+.progress {
   position: absolute;
   top: 52%;
   height: 1px;
   width: 100%;
   transform: scaleX(0);
-  background-color: white;
+  background-color: black;
   transition: all 1s ease;
 }
 
-.nav--bar{
+.nav--bar {
   position: absolute;
   display: flex;
   align-content: space-between;
@@ -57,55 +53,38 @@ body {
   margin-top: 30px;
 }
 
-.logo{
+.logo {
   width: 100px;
   margin-left: 40px;
 }
 
-.section{
+.section {
   display: flex;
   width: 100vw;
   height: 100vh;
   align-items: center;
 }
 
-.section--one--container{
-  width: 360px;
+.section--one--container {
+  width: 460px;
   margin-left: 15%;
+}
+
+.section--one--container p {
+  width: 360px;
 }
 
 .first {
   background-image: url('../assets/images/1.png');
 }
 
-.first h1{
-  font-size: 10rem;
-  line-height: 8rem;
-  letter-spacing: -0.3rem;
-  width: 50%;
-  margin: 0 0 30px -10px;
+h1 {
+  font-family: 'Mirador';
+  font-size: 48px;
+  font-weight: 400;
 }
 
-.button--hero{
-  background: #F2CE6E;
-  color: black;
-  border: none;
-  font-weight: 600;
-  border-radius: 50px;
-  padding: 15px 30px;
-  margin-top: 24px;
-  margin-right: 40px;
-  font-size: 0.6rem;
-  cursor: pointer;
-  transition: all 0.8s ease;
-}
-
-.button--hero:hover{
-  background: black;
-  color: white;
-}
-
-.button--navbar{
+.button--navbar {
   background: black;
   color: white;
   border: none;
@@ -115,13 +94,13 @@ body {
   font-size: 0.6rem;
 }
 
-.second{
+.second {
   background-image: url('../assets/images/2.png');
   justify-content: flex-end;
   position: relative;
 }
 
-.section--two--container{
+.section--two--container {
   width: 360px;
   margin-right: 10%;
   z-index: 1;
@@ -131,16 +110,9 @@ body {
   background-image: url('../assets/images/3.png');
 }
 
-.section--third--container{
+.section--third--container {
   width: 360px;
   margin-left: 10%;
-  z-index: 1;
-}
-
-h2{
-  font-size: 3rem;
-  letter-spacing: -2px;
-  line-height: 2.5rem;
 }
 
 #webgi-canvas {
@@ -150,7 +122,7 @@ h2{
   top: 0;
 }
 
-#webgi-canvas-container{
+#webgi-canvas-container {
   width: 100vw;
   height: 100vh;
   pointer-events: none;
@@ -161,100 +133,96 @@ h2{
   align-items: center;
 }
 
-.logo-section{
-  background-image: url('../assets/images/Bg-ring.jpg');
+.logo-section {
+  background-image: url('../assets/images/Desktopforlogo.png');
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 1440px;
-height: 810px;
-top: 2621px;
-left: 1572px;
-gap: -30px;
-opacity: 0px;
+  width: 100%;
+  height: 810px;
+  top: 2621px;
+  left: 1572px;
+  gap: -30px;
+  opacity: 0px;
 }
 
-.logo-section img{
+.logo-section img {
   width: 522px;
-height: 382px;
-top: 146px;
-left: 471px;
-opacity: 0px;
+  height: 382px;
+  top: 146px;
+  left: 471px;
+  opacity: 0px;
 }
 
-.logo-section h1{
+.logo-section h1 {
   font-family: Mirador;
-font-size: 40px;
-font-weight: 700;
-line-height: 48px;
-text-align: left;
-color:  #32261A;
-margin-top: -3px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 48px;
+  text-align: left;
+  color:  #32261A;
+  margin-top: -3px;
 }
 
 @media (max-width: 480px) {
-  .logo-section{
-      width: 100vw;
-      height: 800px;
-      top: 2575px;
-      left: 3389px;
-      gap: 0px;
-      opacity: 0px;
-      margin-top: -10px;
-               margin-left: -10px;
-
+  .logo-section {
+    width: 100vw;
+    height: 800px;
+    top: 2575px;
+    left: 3389px;
+    gap: 0px;
+    opacity: 0px;
+    margin-top: -10px;
+    margin-left: -10px;
   }
-       .logo-section img {
-              width: 356px;
-               height: 260.79px;
-               top: 270px;
-               left: 4px;
-               gap: 0px;
-               opacity: 0px;
-               
-          }
 
-          .logo-section h1{
-              font-size: 25px;
-          }
-      }
-
-      /* Media queries for 600px devices */
-      @media (max-width: 600px) {
-          .logo-section{
-      width: 100vw;
-             height: 800px;
-             top: 2575px;
-             left: 3389px;
-             gap: 0px;
-             opacity: 0px;
-             margin-top: -10px;
-             margin-left: -10px;
+  .logo-section img {
+    width: 356px;
+    height: 260.79px;
+    top: 270px;
+    left: 4px;
+    gap: 0px;
+    opacity: 0px;
   }
-          .logo-section img {
-              width: 356px;
-             height: 260.79px;
-             top: 270px;
-             left: 4px;
-             gap: 0px;
-             opacity: 0px;
-             
-          }
-      }
+
+  .logo-section h1 {
+    font-size: 25px;
+  }
+}
+
+/* Media queries for 600px devices */
+@media (max-width: 600px) {
+  .logo-section {
+    width: 100vw;
+    height: 800px;
+    top: 2575px;
+    left: 3389px;
+    gap: 0px;
+    opacity: 0px;
+    margin-top: -10px;
+    margin-left: -10px;
+  }
+
+  .logo-section img {
+    width: 356px;
+    height: 260.79px;
+    top: 270px;
+    left: 4px;
+    gap: 0px;
+    opacity: 0px;
+  }
+}
 
 /* MOBILE ADJUSTMENTS */
-
 @media (max-width: 600px) {
-
-
-  html, body, .container, nav{
+  html, body, .container, nav {
     overflow-x: hidden;
   }
 
-  .first h1{
+  .first h1 {
     font-size: 4rem;
     line-height: 4rem;
     letter-spacing: -0.1rem;
@@ -262,14 +230,14 @@ margin-top: -3px;
     margin: 0 0 15px 0px;
   }
 
-  .nav--bar{
+  .nav--bar {
     margin-top: 0;
     z-index: 1;
     background: #ffffffad;
     padding: 30px 0;
     backdrop-filter: blur(5px);
   }
-  
+
   .section--one--container {
     width: 360px;
     margin-left: 6%;
@@ -280,10 +248,10 @@ margin-top: -3px;
     width: 70%;
   }
 
-  .second{
+  .second {
     align-items: flex-end;
   }
-  
+
   .section--third--container {
     background-image: url('../assets/images/3.png');
     width: 220px;
