--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: 'GeorgiaBallpark';
   src: url('../assets/fonts/GeorgiaBallparkScript.otf') format('opentype');
@@ -32,6 +33,7 @@ body {
   align-content: center;
   align-items: center;
   z-index: 2;
+  
 }
 
 .progress {
@@ -41,7 +43,7 @@ body {
   width: 100%;
   transform: scaleX(0);
   background-color: black;
-  transition: all 1s ease;
+  transition: all 1s eas
 }
 
 .nav--bar {
@@ -58,6 +60,7 @@ body {
   margin-left: 40px;
 }
 
+
 .section {
   display: flex;
   width: 100vw;
@@ -71,8 +74,102 @@ body {
 }
 
 .section--one--container p {
-  width: 360px;
-}
+
+  width: 500px;
+  font-family: 'Mirador';
+  transform: scale(0.94);
+  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+
+  }
+
+  span {
+    display: inline-block;
+    opacity: 0;
+    filter: blur(2px);
+  }
+  
+  span:nth-child(1) {
+    animation: fade-in 1.8s 1.1s forwards cubic-bezier(0.11, 0, 0.1, 0);
+  }
+  
+  span:nth-child(2) {
+    animation: fade-in 1.8s 1.2s forwards cubic-bezier(0.11, 0, 0.2, 0);
+  }
+  
+  span:nth-child(3) {
+    animation: fade-in 1.8s 1.3s forwards cubic-bezier(0.11, 0, 0.3, 0);
+  }
+  
+  span:nth-child(4) {
+    animation: fade-in 1.8s 1.4s forwards cubic-bezier(0.11, 0, 0.4, 0);
+  }
+  
+  span:nth-child(5) {
+    animation: fade-in 1.8s 1.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(6) {
+    animation: fade-in 1.8s 1.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(7) {
+    animation: fade-in 1.8s 1.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(8) {
+    animation: fade-in 1.8s 1.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(9) {
+    animation: fade-in 1.8s 1.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(10) {
+    animation: fade-in 1.8s 2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(11) {
+    animation: fade-in 1.8s 2.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(12) {
+    animation: fade-in 1.8s 2.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(13) {
+    animation: fade-in 1.8s 2.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(14) {
+    animation: fade-in 1.8s 2.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(15) {
+    animation: fade-in 1.8s 2.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  span:nth-child(16) {
+    animation: fade-in 1.8s 2.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  @keyframes fade-in {
+  
+    100% {
+      opacity: 1;
+      filter: blur(0);
+    }
+  }
+  
+ 
 
 .first {
   background-image: url('../assets/images/1.png');
@@ -83,6 +180,9 @@ h1 {
   font-size: 48px;
   font-weight: 400;
 }
+
+
+
 
 .button--navbar {
   background: black;
@@ -106,14 +206,124 @@ h1 {
   z-index: 1;
 }
 
+.section--two--container p {
+  width: 500px;
+  font-family: 'Mirador';
+  transform: scale(0.94);
+  animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
+}
+
+@keyframes scale {
+  100% {
+    transform: scale(1);
+  }
+}
+
+span {
+  display: inline-block;
+  opacity: 0;
+  filter: blur(2px);
+}
+
+span:nth-child(17) {
+  animation: fade-in 1.8s 4.1s forwards cubic-bezier(0.11,0, 0.1, 0);
+}
+
+span:nth-child(18) {
+  animation: fade-in 1.8s 4.2s forwards cubic-bezier(0.11, 0, 0.2, 0);
+}
+
+span:nth-child(19) {
+  animation: fade-in 1.8s 4.3s forwards cubic-bezier(0.11, 0, 0.3, 0);
+}
+
+span:nth-child(20) {
+  animation: fade-in 1.8s 4.4s forwards cubic-bezier(0.11, 0, 0.4, 0);
+}
+
+span:nth-child(21) {
+  animation: fade-in 1.8s 4.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(22) {
+  animation: fade-in 1.8s 4.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(23) {
+  animation: fade-in 1.8s 4.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(24) {
+  animation: fade-in 1.8s 4.8s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(25) {
+  animation: fade-in 1.8s 4.9s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(26) {
+  animation: fade-in 1.8s 5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(27) {
+  animation: fade-in 1.8s 5.1s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(28) {
+  animation: fade-in 1.8s 5.2s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(29) {
+  animation: fade-in 1.8s 5.3s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(30) {
+  animation: fade-in 1.8s 5.4s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(31) {
+  animation: fade-in 1.8s 5.5s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(32) {
+  animation: fade-in 1.8s 5.6s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+
+span:nth-child(33) {
+  animation: fade-in 1.8s 5.7s forwards cubic-bezier(0.11, 0, 0.5, 0);
+}
+@keyframes fade-in {
+
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+
+@keyframes fade-in {
+
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+
 .third {
   position: relative;
   background-image: url('../assets/images/3.png');
 }
 
 .section--third--container {
-  width: 100%;
-  margin-left: 10%;
+  width: 460px;
+  align-items: center;
+}
+
+.section--third--container p {
+
+  width: 500px;
+  font-family: 'Mirador';
 }
 
 
