--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,13 @@
   src: url('../assets/fonts/ReneBieder.otf') format('opentype');
 }
 
+@font-face {
+  font-family: 'Inria Serif';
+  src: url(../assets/fonts/InriaSerif-Regular.otf) format('opentype');
+}
+
 body {
+  background: url('../assets/images/Frame17.png');
   overflow-x: hidden;
   margin: 0;
   padding: 0;
@@ -21,7 +27,7 @@ body {
 }
 
 .container {
-  background: url('../assets/images/Frame17.png');
+  z-index: -1;
 }
 
 .loader {
@@ -102,6 +108,7 @@ p {
 .second {
   justify-content: flex-end;
   position: relative;
+  height: 750px;
 }
 
 .section--two--container {
@@ -141,6 +148,7 @@ p {
   justify-content: flex-end;
   flex-direction: column;
   align-items: center;
+  z-index: 0;
 }
 
 
@@ -159,7 +167,6 @@ p {
   left: 1572px;
   gap: -30px;
   opacity: 0px;
-  position: relative;
 }
 
 .logo-section img {
@@ -180,8 +187,107 @@ p {
   margin-top: -3px;
 }
 
-@media (max-width: 480px) {
-  .logo-section {
+.footer {
+  background: black;
+  display: flex;
+  position: relative;
+  color: #FFFFFF;
+  width: 100%;
+  height: 300px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer p {
+  font-family: 'Inria Serif';
+  font-size: 15px;
+}
+
+.left {
+  align-items: start;
+  margin-left:100px;
+  width: 40%;
+  justify-items: center;
+}
+
+.left img {
+  margin-top: -15px;
+  margin-left: -6px;
+}
+
+.right {
+  width: 30%;
+  margin-left: 300px;
+  margin-top: 25px;
+}
+
+.social {
+  width: 30%;
+  margin-left: 50px;
+  margin-top: -13px;
+}
+
+/* MOBILE ADJUSTMENTS */
+@media (max-width: 600px) {
+  html, body, .container, nav {
+    overflow-x: hidden;
+  }
+
+  body {
+    background: url('../assets/images/softm2.png');
+    top: 0;
+  }
+
+  .container {
+    z-index: -1;
+  }
+
+  h1 {
+    font-size: 32px;
+  }
+
+  .nav--bar {
+    margin-top: 0;
+    padding: 30px 0;
+    backdrop-filter: blur(5px);
+  }
+
+  .first {
+    justify-content: center;
+  }
+
+  .section--one--container {
+    width: 90%;
+    margin: 0;
+    margin-top: 550px;
+    text-align: center;
+    padding: 0;
+  }
+
+  .section--one--container p {
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .second {
+    width: 350px;
+    margin-left: 30px;
+    align-items: flex-end;
+    justify-content: flex-start;
+  }
+
+  .section--two--container {
+    margin: 0;
+    margin-left: 7%;
+    
+  }
+
+  .section--third--container {
+    width: 90%;
+    margin-top: 80px;
+  }
+
+  .logo-section{
     width: 100vw;
     height: 800px;
     top: 2575px;
@@ -190,8 +296,8 @@ p {
     opacity: 0px;
     margin-top: -10px;
     margin-left: -10px;
+    z-index: 1;
   }
-
   .logo-section img {
     width: 356px;
     height: 260.79px;
@@ -202,72 +308,45 @@ p {
   }
 
   .logo-section h1 {
-    font-size: 25px;
-  }
-}
-
-/* Media queries for 600px devices */
-@media (max-width: 600px) {
-  .logo-section {
-    width: 100vw;
-    height: 800px;
-    top: 2575px;
-    left: 3389px;
-    gap: 0px;
-    opacity: 0px;
-    margin-top: -10px;
-    margin-left: -10px;
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: -3px;
   }
 
-  .logo-section img {
-    width: 356px;
-    height: 260.79px;
-    top: 270px;
-    left: 4px;
-    gap: 0px;
-    opacity: 0px;
-  }
-}
-
-/* MOBILE ADJUSTMENTS */
-@media (max-width: 600px) {
-  html, body, .container, nav {
-    overflow-x: hidden;
+  .footer {
+    height: 300px;
+    display: block;
   }
 
-  .first h1 {
-    font-size: 4rem;
-    line-height: 4rem;
-    letter-spacing: -0.1rem;
-    width: 50%;
-    margin: 0 0 15px 0px;
+  .left {
+    margin-left: 30px;
   }
 
-  .nav--bar {
-    margin-top: 0;
-    z-index: 1;
-    background: #ffffffad;
-    padding: 30px 0;
-    backdrop-filter: blur(5px);
+  .left p {
+    width: 200px;
+    font-size: 13px;
+    padding-top: 15px;
   }
 
-  .section--one--container {
-    width: 360px;
-    margin-left: 6%;
-    margin-top: 40%;
+  .left img {
+    width: 250px;
+    margin-top: -15px;
+    margin-left: -6px;
   }
 
-  .section--one--container > p {
-    width: 70%;
+  .right {
+    width: 100%;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 30px;
   }
 
-  .second {
-    align-items: flex-end;
+  .social p{
+    display: none;
   }
 
-  .section--third--container {
-    background-image: url('../assets/images/3.png');
-    width: 220px;
-    margin-left: 7%;
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 }
