--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'GeorgiaBallpark';
   src: url('../assets/fonts/GeorgiaBallparkScript.otf') format('opentype');
@@ -11,11 +10,10 @@
 
 @font-face {
   font-family: 'Inria Serif';
-  src: url(../assets/fonts/InriaSerif-Regular.otf) format('opentype');
+  src: url('../assets/fonts/InriaSerif-Regular.otf') format('opentype');
 }
 
 body {
-  background: url('../assets/images/Frame17.png');
   overflow-x: hidden;
   margin: 0;
   padding: 0;
@@ -28,7 +26,8 @@ body {
 }
 
 .container {
-  z-index: -1;
+  background: url('../assets/images/Frame17.png');
+  font-family: 'Mirador';
 }
 
 .loader {
@@ -42,19 +41,6 @@ body {
   align-content: center;
   align-items: center;
   z-index: 2;
-  
-}
-
-.loader_img{
-
-  width: 100px;
-  margin-left: 40px;
-  display:inline;
-  justify-content: center;
-  align-content: center;
-  padding-top: -150px;
-  
-
 }
 
 .progress {
@@ -64,7 +50,7 @@ body {
   width: 100%;
   transform: scaleX(0);
   background-color: black;
-  transition: all 1s eas
+  transition: all 1s ease;
 }
 
 .nav--bar {
@@ -81,7 +67,6 @@ body {
   margin-left: 40px;
 }
 
-
 .section {
   display: flex;
   width: 100vw;
@@ -90,28 +75,20 @@ body {
 }
 
 .section--one--container {
-  width: 500px;
+  width: 460px;
   margin-left: 15%;
 }
-
-
- /* Section first ux */
 
 .section--one--container p {
   width: 360px;
 }
 
-.first {
-  background-image: url('../assets/images/1.png');
-}
-
 h1 {
   font-family: 'Mirador';
-  font-size: 38px;
+  font-size: 48px;
   font-weight: 400;
-  line-height: 57.6px;
-  text-align: left;
-  
+  margin: 0;
+  padding: 0;
 }
 
 p {
@@ -136,10 +113,12 @@ p {
 }
 
 .section--two--container {
-  width: 500px;
+  width: 430px;
   margin-right: 10%;
   z-index: 1;
 }
+
+
 
 .third {
   justify-content: center;
@@ -147,8 +126,9 @@ p {
 }
 
 .section--third--container {
-  width: 100%;
-  margin-left: 10%;
+  width: 837px;
+  margin-top: 50px;
+  text-align: center;
 }
 
 
@@ -169,7 +149,6 @@ p {
   justify-content: flex-end;
   flex-direction: column;
   align-items: center;
-  z-index: 0;
 }
 
 
@@ -202,7 +181,6 @@ p {
   font-family: Mirador;
   font-size: 40px;
   font-weight: 700;
-  line-height: 48px;
   text-align: left;
   color:  #32261A;
   margin-top: -3px;
@@ -221,7 +199,7 @@ p {
 
 .footer p {
   font-family: 'Inria Serif';
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .left {
@@ -248,155 +226,118 @@ p {
   margin-top: -13px;
 }
 
-/* MOBILE ADJUSTMENTS */
+/* Media queries for 600px devices */
 @media (max-width: 600px) {
-  html, body, .container, nav {
-    overflow-x: hidden;
-  }
-
-  body {
-    background: url('../assets/images/softm2.png');
-    top: 0;
-  }
-
   .container {
-    z-index: -1;
+    background: url('../assets/images/softm2.png');
+    font-family: 'Mirador';
+  }
+
+  .first {
+    justify-content: center;
+    text-align: start;
+  }
+
+  .section--one--container {
+    width: 80%;
+    margin: 0;
+    margin-top: 40rem;
+    justify-content: center;
+  }
+
+  .second {
+    justify-content: center;
+    text-align: start;
+  }
+
+  .section--two--container {
+    width: 80%;
+    margin: 0;
+    margin-top: 35rem;
+    justify-content: center;
+  }
+
+  .section--two--container h1 {
+    line-height: 0.7;
+  }
+
+  .third {
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .section--third--container {
+    width: 85%;
+    margin: 0;
+    margin-top: 100px;
+    text-align: center;
+  }
+
+  .logo-section {
+    width: 100%;
+    height: 700px;
+    top: 2575px;
+    left: 3389px;
+    gap: 0px;
+    opacity: 0px;
+    margin: 0;
+  }
+
+  .logo-section h1 {
+    font-size: 25px;
   }
 
   h1 {
     font-size: 32px;
   }
 
-  .nav--bar {
-    margin-top: 0;
-    padding: 30px 0;
-    backdrop-filter: blur(5px);
+  p {
+    font-size: 16px;
   }
 
-  .first {
-    justify-content: center;
+  .logo-section img {
+    width: 356px;
+    height: 260.79px;
+    top: 270px;
+    left: 4px;
+    gap: 0px;
+    opacity: 0px;
   }
 
-  .section--one--container {
-    width: 90%;
-    margin: 0;
-    margin-top: 550px;
-    text-align: center;
-    padding: 0;
+  .footer {
+    height: 300px;
+    display: block;
   }
 
-  .section--one--container p {
-    font-size: 12px;
-    width: 100%;
-  }
-
-  .second {
-    width: 350px;
+  .left {
     margin-left: 30px;
-    align-items: flex-end;
-    justify-content: flex-start;
   }
 
-  .section--two--container {
+  .left p {
+    width: 200px;
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
+  .left img {
+    width: 250px;
+    margin-top: -15px;
+    margin-left: -6px;
+  }
+
+  .right {
+    width: 100%;
+    font-size: 14px;
     margin: 0;
-    margin-left: 7%;
-    
+    margin-left: 30px;
   }
 
-  .section--third--container {
-    width: 90%;
-    margin-top: 80px;
+  .social p{
+    display: none;
   }
 
-  .logo-section{
-    width: 100vw;
-    height: 800px;
-    top: 2575px;
-    left: 3389px;
-    gap: 0px;
-    opacity: 0px;
-    margin-top: -10px;
-    margin-left: -10px;
-    z-index: 1;
-  }
-  .logo-section img {
-    width: 356px;
-    height: 260.79px;
-    top: 270px;
-    left: 4px;
-    gap: 0px;
-    opacity: 0px;
-  }
-
-  .logo-section h1 {
-    font-size: 25px;
-  }
-}
-
-
-
-/* Media queries for 600px devices */
-@media (max-width: 600px) {
-  .logo-section {
-    width: 100vw;
-    height: 800px;
-    top: 2575px;
-    left: 3389px;
-    gap: 0px;
-    opacity: 0px;
-    margin-top: -10px;
-    margin-left: -10px;
-  }
-
-  .logo-section img {
-    width: 356px;
-    height: 260.79px;
-    top: 270px;
-    left: 4px;
-    gap: 0px;
-    opacity: 0px;
-  }
-}
-
-/* MOBILE ADJUSTMENTS */
-@media (max-width: 600px) {
-  html, body, .container, nav {
-    overflow-x: hidden;
-  }
-
-  .first h1 {
-    font-size: 4rem;
-    line-height: 4rem;
-    letter-spacing: -0.1rem;
-    width: 50%;
-    margin: 0 0 15px 0px;
-  }
-
-  .nav--bar {
-    margin-top: 0;
-    z-index: 1;
-    background: #ffffffad;
-    padding: 30px 0;
-    backdrop-filter: blur(5px);
-  }
-
-  .section--one--container {
-    width: 360px;
-    margin-left: 6%;
-    margin-top: 40%;
-  }
-
-  .section--one--container > p {
-    width: 70%;
-  }
-
-  .second {
-    align-items: flex-end;
-  }
-
-  .section--third--container {
-    background-image: url('../assets/images/3.png');
-    width: 220px;
-    margin-left: 7%;
+  .social {
+    margin-top: 20px;
+    margin-left: 30px;
   }
 }
