--- a/src/styles.css
+++ b/src/styles.css
@@ -36,11 +36,23 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
-  display: flex;
+  display: block;
   justify-content: center;
   align-content: center;
   align-items: center;
   z-index: 2;
+}
+
+.loader img {
+  margin: 0;
+  margin-left: 20%;
+  margin-top: -50px;
+}
+
+.loader p {
+  margin: 0;
+  margin-left: 25%;
+  margin-top: 10px;
 }
 
 .progress {
