--- a/src/styles.css
+++ b/src/styles.css
@@ -44,14 +44,15 @@ body {
 }
 
 .loader img {
+  width: 340px;
   margin: 0;
-  margin-left: 20%;
-  margin-top: -50px;
+  margin-left: 35%;
+  margin-top: -135px;
 }
 
 .loader p {
   margin: 0;
-  margin-left: 25%;
+  margin-left: 40%;
   margin-top: 10px;
 }
 
@@ -351,5 +352,17 @@ p {
   .social {
     margin-top: 20px;
     margin-left: 30px;
+  }
+
+  .loader img {
+    margin: 0;
+    margin-left: 4%;
+    margin-top: -140px;
+  }
+  
+  .loader p {
+    margin: 0;
+    margin-left: 25%;
+    margin-top: 10px;
   }
 }
